Fix map showing on mobile

--- a/web/app/themes/justicejobs/src/scss/layout/_search.scss
+++ b/web/app/themes/justicejobs/src/scss/layout/_search.scss
@@ -102,7 +102,10 @@
         transform: translateX(0);
         opacity: 1;
         visibility: visible;
-        min-width: calc(100vw - 590px);
+
+        @include respond-to(lm) {
+            min-width: calc(100vw - 590px);
+        }
     }
     &__map {
         width: 100%;
@@ -130,9 +133,12 @@
         }
     }
     &__container#js-show-map > &__list-wrap {
-        max-height: 75vh;
         overflow-y: auto;
         overflow-x: hidden;
+
+        @include respond-to(lm) {
+            max-height: 75vh;
+        }
     }
     &__list {
         margin-right: 20px;
